--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^5.0.0",
-        "php": "^8.2.0"
+        "craftcms/cms": "^4.0.0 || ^5.0.0",
+        "php": "^8.0.2"
     },
     "autoload": {
         "psr-4": {
